# IPDPS-CRS-CMP-code

./: .gitignore  README.md
CMP/CUDA/: Makefile
CMP/CUDA/include/: cuda.hpp  utils.hpp
CMP/CUDA/src/: cuda.cpp  main.cu
CMP/OpenACC/: CMakeLists.txt
CMP/OpenACC/src/: main.cpp
CMP/OpenCL/: CMakeLists.txt
CMP/OpenMP/: CMakeLists.txt
CRS/CUDA/: CMakeLists.txt  Makefile
CRS/CUDA/include/: utils.hpp
CRS/CUDA/src/: main.cu
CRS/OpenACC/: CMakeLists.txt
CRS/OpenACC/src/: main.cpp
CRS/OpenCL/: CMakeLists.txt
CRS/OpenMP/: CMakeLists.txt.gcc
CRS/OpenMP/src/: main.cpp
